
v0.2.1
- bugfix: config.toml will not ignore custom entries

v0.2.0
- bugfixes
- improved Page() and Asset() semantics
- rename Page.sections -> Page.pages
- remove redundant static folder support


v0.1.0
- Initial release of norite on pypi